--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,7 @@
   --sidebar-ring: oklch(0.551 0.027 264.364);
 }
 
+
 @layer utilities{
   
  .gradient-title {
@@ -125,4 +126,14 @@
   body {
     @apply bg-background text-foreground;
   }
+
 }
+
+
+.wmde-markdown ul {
+  list-style-type: disc;
+  padding-left: 25px;
+  color: white;
+}
+
+
